2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: re-enable opd_check_image_mtime() it's not
	  perfect but better than nothing

	* libutil++/cverb.cpp: comment fix

2002-12-04  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Revised checking to determine kernel
	  interface.


2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_test.c: measure system + user time

	* dae/oprofiled.c: better error message
	* daemon/oprofiled.c: write_abi() is static

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_stat.c:
	* libdb/db_debug.c: Alex whisp me than a few code was not 64 bits
	  size_t safe.

2002-12-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in:
	* doc/Makefile.am: remove references to deprecated stuff
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: add --version
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/op_start:
	* utils/op_start_25:
	* utils/op_stop_25:
	* utils/op_stop: print deprecation notice
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/op_session.c:
	* utils/op_dump: print deprecation notice
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: do not shutdown on --reset. Send
	  signal on --reset/--save like op_session. Try to dump
	  like op_session to hack race "fix"
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: complain on opcontrol --save 
 
2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c:
	* daemon/opd_kernel.h: minor cleanup

	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp: fix bad include filename.

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/.cvsignore:
	* libdb/Makefile.am:
	* libdb/*.c --> db-hash-name.c to db_name.c

	* dae/opd_image.h:
	* daemon/opd_image.h:
	* pp/samples_file.h: include db_hash.h

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>
